[gd_scene load_steps=4 format=3 uid="uid://cjnf65k4l3we2"]

[ext_resource type="Script" uid="uid://d2rmm0phac1x1" path="res://scenes/ui/game_ui/pause_menu/game_pause_menu.gd" id="1_gdceq"]
[ext_resource type="PackedScene" uid="uid://ckbpa6sh3nhiw" path="res://scenes/ui/game_ui/options_menu/game_options_menu.tscn" id="2_g4mjn"]

[sub_resource type="LabelSettings" id="LabelSettings_gdceq"]
font_size = 24
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)

[node name="GamePauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gdceq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.337255)

[node name="PauseMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -22.0
offset_right = 20.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="PauseMenu"]
layout_mode = 2
text = "Back"

[node name="Options" type="Button" parent="PauseMenu"]
layout_mode = 2
text = "Options"

[node name="MenuQuit" type="Button" parent="PauseMenu"]
layout_mode = 2
text = "Return to Menu"

[node name="DesktopQuit" type="Button" parent="PauseMenu"]
layout_mode = 2
text = "Quit to Desktop"

[node name="GameOptionsMenu" parent="." instance=ExtResource("2_g4mjn")]
visible = false
layout_mode = 1

[node name="SaveAndConfirm" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.5
offset_top = -156.5
offset_right = 149.5
offset_bottom = 156.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SaveAndConfirm"]
layout_mode = 2
theme_override_constants/margin_top = 16

[node name="Label" type="Label" parent="SaveAndConfirm/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Save your game?"
label_settings = SubResource("LabelSettings_gdceq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SaveAndConfirm"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 103

[node name="HBoxContainer" type="HBoxContainer" parent="SaveAndConfirm/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="YesButton" type="Button" parent="SaveAndConfirm/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "YES"

[node name="NoButton" type="Button" parent="SaveAndConfirm/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_vertical = 4
text = "NO"

[node name="Back" type="Button" parent="SaveAndConfirm/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "BACK"

[connection signal="pressed" from="PauseMenu/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="PauseMenu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PauseMenu/MenuQuit" to="." method="_on_menu_quit_pressed"]
[connection signal="pressed" from="PauseMenu/DesktopQuit" to="." method="_on_desktop_quit_pressed"]
[connection signal="back_pressed" from="GameOptionsMenu" to="." method="_on_game_options_menu_back_pressed"]
[connection signal="pressed" from="SaveAndConfirm/VBoxContainer/HBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="SaveAndConfirm/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="SaveAndConfirm/VBoxContainer/Back" to="." method="_on_quit_back_pressed"]
